cmake_minimum_required(VERSION 3.15)

project(ImGui LANGUAGES CXX C)

file(GLOB IMGUI_SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/*.h" "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

add_library(ImGui STATIC ${IMGUI_SRC_FILES})

target_include_directories(ImGui PUBLIC ${CMAKE_CURRENT_LIST_DIR})

set_target_properties(ImGui PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set_target_properties(ImGui PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")